--- a/CollageView-01/ScrollableCollageView.xib
+++ b/CollageView-01/ScrollableCollageView.xib
@@ -1,18 +1,55 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ScrollableCollageView" customModule="CollageView_01" customModuleProvider="target">
+            <connections>
+                <outlet property="collageView" destination="Cwc-rZ-aba" id="Gox-b4-kAE"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" scrollEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8KZ-Zj-vj9">
+                    <rect key="frame" x="0.0" y="168" width="414" height="128"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cwc-rZ-aba" customClass="CollageView" customModule="CollageView_01" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="Cwc-rZ-aba" firstAttribute="top" secondItem="8xZ-vP-TrJ" secondAttribute="top" id="Hij-Hm-JYK"/>
+                        <constraint firstItem="8xZ-vP-TrJ" firstAttribute="leading" secondItem="Cwc-rZ-aba" secondAttribute="leading" id="J0O-Mo-M1x"/>
+                        <constraint firstItem="Cwc-rZ-aba" firstAttribute="bottom" secondItem="8xZ-vP-TrJ" secondAttribute="bottom" id="ZR6-DU-hNl"/>
+                        <constraint firstItem="Cwc-rZ-aba" firstAttribute="trailing" secondItem="8xZ-vP-TrJ" secondAttribute="trailing" id="ptL-L1-s5b"/>
+                        <constraint firstItem="Cwc-rZ-aba" firstAttribute="width" secondItem="EBd-gr-Wea" secondAttribute="width" id="sof-vu-kCZ"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="8xZ-vP-TrJ"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="EBd-gr-Wea"/>
+                </scrollView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="8KZ-Zj-vj9" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="0Qa-jh-vCI"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="8KZ-Zj-vj9" secondAttribute="bottom" id="VZy-Bm-2Cu"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="8KZ-Zj-vj9" secondAttribute="trailing" id="deG-8M-FQq"/>
+                <constraint firstItem="8KZ-Zj-vj9" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="tIz-BU-edj"/>
+            </constraints>
+            <point key="canvasLocation" x="138" y="82"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
